Redesign client (#776)
implements a Server-sent Events (SSE) Source Connector.